tests/ui/feature-gates/feature-gate-patchable-function-entry.stderr
error[E0658]: the `#[patchable_function_entry]` attribute is an experimental feature
  --> $DIR/feature-gate-patchable-function-entry.rs:1:1
   |
LL | #[patchable_function_entry(prefix_nops = 1, entry_nops = 1)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #123115 <https://github.com/rust-lang/rust/issues/123115> for more information
   = help: add `#![feature(patchable_function_entry)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
